--- a/mijnWebsite/blog/templates/blog/post_list.html
+++ b/mijnWebsite/blog/templates/blog/post_list.html
@@ -10,12 +10,17 @@
 		<title></title>
 	</head>
 	<body>
-		{% block content %} {% for post in posts %}
-		<article class="post">
-			<time class="date"> {{ post.published_date }} </time>
-			<h2><a href=""> {{ post.title }} </a></h2>
-			<p>{{ post.text|linebreaksbr }}</p>
-		</article>
-		{% endfor %} {% endblock %}
+		<header><h1>Mijn website</h1></header>
+		<div>
+			{% block content %} {% for post in posts %}
+
+			<article class="post">
+				<time class="date"> {{ post.published_date }} </time>
+				<h2><a href=""> {{ post.title }} </a></h2>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</article>
+			{% endfor %} {% endblock %}
+		</div>
+		<footer></footer>
 	</body>
 </html>
