--- a/mijnWebsite/blog/templates/blog/post_list.html
+++ b/mijnWebsite/blog/templates/blog/post_list.html
@@ -6,7 +6,9 @@
 		<meta charset="utf-8" />
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-		<link rel="stylesheet" href="{% static 'css/stijl.css' %}" />
+		<link rel="stylesheet" href="{% static 'CSS/stijl.css' %}" />
+		<!-- Deze is niet correct, hoofdlettergevoelig naar de map op PythonAnywhere	<link rel="stylesheet" href="{% static 'css/stijl.css' %}" />
+ -->
 		<title></title>
 	</head>
 	<body>
