--- a/mijnWebsite/blog/templates/blog/post_list.html
+++ b/mijnWebsite/blog/templates/blog/post_list.html
@@ -1,28 +1,17 @@
+{% extends 'blog/base.html' %}
+<!-- deze template is de basis template voor de blog, hier worden de algemene zaken zoals de header en footer gedefinieerd, deze template wordt gebruikt in alle andere templates van de blog -->
 {% load static %}
+<!-- deze regel laadt de static bestanden, zoals CSS en afbeeldingen, zodat deze gebruikt kunnen worden in de templates -->
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-		<link rel="stylesheet" href="{% static 'CSS/stijl.css' %}" />
-		<!-- Deze is niet correct, hoofdlettergevoelig naar de map op PythonAnywhere	<link rel="stylesheet" href="{% static 'css/stijl.css' %}" />
- -->
-		<title></title>
-	</head>
-	<body>
-		<header><h1>Mijn website</h1></header>
-		<div>
-			{% block content %} {% for post in posts %}
-
-			<article class="post">
-				<time class="date"> {{ post.published_date }} </time>
-				<h2><a href=""> {{ post.title }} </a></h2>
-				<p>{{ post.text|linebreaksbr }}</p>
-			</article>
-			{% endfor %} {% endblock %}
-		</div>
-		<footer></footer>
-	</body>
-</html>
+{% block title %}Mijn blog{% endblock %} {% block inhoud %} {% for post in posts %}
+<article class="post">
+	<time class="date"> {{ post.published_date }} </time>
+	<h2>
+		<a href="{% url 'post_inhoud' pk = post.pk % }">
+			<!--dit is de url naar de post inhoud, de detailpagina van de post. pk staat voor primary key; url aanmaken in urls.py -->
+			{{ post.title }}
+		</a>
+	</h2>
+	<p>{{ post.text|linebreaksbr }}</p>
+</article>
+{% endfor %} {% endblock %}
